# zingolib

./: Cargo.toml
.github/workflows/: cargo-checkmate.yaml  ci-nightly.yaml  ci.yaml  coverage.yaml  test.yaml
darkside-tests/: Cargo.toml
darkside-tests/src/: chain_generics.rs  darkside_connector.rs  utils.rs
darkside-tests/tests/: advanced_reorg_tests.rs  network_interruption_tests.rs  tests.rs
docker-ci/: Dockerfile
docs/testing/: MAINNET_HOT_WALLET.md
libtonode-tests/: Cargo.toml
libtonode-tests/tests/: chain_generics.rs  concrete.rs  sync.rs  wallet.rs
testvectors/: Cargo.toml
testvectors/src/: lib.rs
zingo-memo/: Cargo.toml
zingo-memo/src/: lib.rs
zingo-netutils/: Cargo.toml
zingo-netutils/src/: lib.rs
zingo-status/src/: confirmation_status.rs
zingo-sync/: Cargo.toml
zingo-sync/src/: client.rs  keys.rs  lib.rs  primitives.rs  scan.rs  sync.rs  traits.rs  utils.rs  witness.rs
zingo-sync/src/client/: fetch.rs
zingo-sync/src/keys/: transparent.rs
zingo-sync/src/scan/: compact_blocks.rs  task.rs  transactions.rs
zingo-sync/src/scan/compact_blocks/: runners.rs
zingo-sync/src/sync/: spend.rs  state.rs  transparent.rs
zingocli/: Cargo.toml
zingocli/bash/: repeated_test.sh
zingocli/src/: lib.rs
zingolib/: CHANGELOG.md  Cargo.toml
zingolib/src/: blaze.rs  commands.rs  config.rs  config_templaters.rs  data.rs  error.rs  lib.rs  lightclient.rs  mocks.rs  testutils.rs  testvectors.rs  utils.rs  wallet.rs
zingolib/src/blaze/: block_management_reorg_detection.rs  trial_decryptions.rs  update_notes.rs
zingolib/src/data/: witness_trees.rs
zingolib/src/lightclient/: describe.rs  propose.rs  send.rs  sync.rs
zingolib/src/testutils/: assertions.rs  chain_generics.rs  fee_tables.rs  grpc_proxy.rs  lightclient.rs  macros.rs  regtest.rs  scenarios.rs
zingolib/src/testutils/chain_generics/: conduct_chain.rs  fixtures.rs  libtonode.rs  live_chain.rs  with_assertions.rs
zingolib/src/testutils/scenarios/: config_templaters.rs
zingolib/src/utils/: conversion.rs
zingolib/src/wallet/: data.rs  describe.rs  disk.rs  error.rs  message.rs  propose.rs  send.rs  sync.rs  traits.rs  transaction_context.rs  transaction_record.rs  transaction_records_by_id.rs  tx_map.rs  witnesses.rs
zingolib/src/wallet/disk/: testing.rs
zingolib/src/wallet/disk/testing/: examples.rs  tests.rs
zingolib/src/wallet/keys/: legacy.rs  unified.rs
zingolib/src/wallet/keys/legacy/: extended_transparent.rs
zingolib/src/wallet/notes/: interface.rs  orchard.rs  query.rs  transparent.rs
zingolib/src/wallet/transaction_records_by_id/: trait_inputsource.rs
zingolib/src/wallet/tx_map/: read_write.rs  recording.rs  spending_data.rs  trait_stub_inputsource.rs  trait_walletread.rs  trait_walletwrite.rs
