#  The order of the members reflects a dimension of the dependency relation, the first four depend on
#     *  zingolib
#  which depends in turn, on the bottom 3.
#  This doesn't account for all dependency relations, for example, zingocli depends on zingoconfig directly (for now).
[workspace]
members = [
    "libtonode-tests",
    "darkside-tests",
    "zingocli",
    "zingolib",
    "zingo-netutils",
    "zingo-memo",
    "zingo-sync",
    "testvectors",
]
resolver = "2"

[workspace.dependencies]
bip0039 = "0.11"
incrementalmerkletree = "0.7"
orchard = "0.10"
sapling-crypto = "0.3"
shardtree = "0.5"

# annotated tag starting with LRZ base tag and ending with `git describe --dirty`
# TAG FROM `main_zingolib` BRANCH OF LIBRUSTZCASH FORK!
zcash_address = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2" }
zcash_client_backend = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2" , features = ["lightwalletd-tonic", "orchard", "transparent-inputs"] }
zcash_encoding = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2"  }
zcash_keys = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2" , features = ["transparent-inputs", "sapling", "orchard" ] }
zcash_note_encryption = "0.4"
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2"  }
zcash_proofs = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2"  }
zcash_protocol = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2"  }
zip32 = "0.1"

append-only-vec = { git = "https://github.com/zancas/append-only-vec.git", branch = "add_debug_impl" }
base58 = "0.1"
base64 = "0.13"
bls12_381 = "0.8"
build_utils = { path = "./build_utils" }
byteorder = "1"
bytes = "1"
chrono = "0.4"
clap = "4"
concat-idents = "1"
dirs = "5"
enum_dispatch = "0.3"
ff = "0.13"
futures = "0.3"
futures-util = "0.3"
getset = "0.1"
group = "0.13"
hex = "0.4"
http = "1"
http-body-util = "0.1"
http-body = "1"
hyper-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["http2"] }
indoc = "2"
itertools = "0.13"
json = "0.12"
jubjub = "0.10"
lazy_static = "1"
log = "0.4"
log4rs = "1"
memuse = "0.2"
nonempty = "0.7"
portpicker = "0.1"
proptest = "1"
prost = "0.13"
rand = "0.8"
reqwest = "0.12"
ring = "0.17"
rust-embed = "6"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rustyline = "11"
secp256k1 = "0.27"
secrecy = "0.8"
serde = "1"
serde_json = "1"
sha2 = "0.10"
shellwords = "1"
subtle = "2"
tempdir = "0.3"
tempfile = "3"
test-case = "3"
thiserror = "1"
tokio = "1"
tokio-rustls = "0.26"
tonic = {version = "0.12", features = ["tls", "tls-roots", "tls-webpki-roots"]}
tonic-build = "0.12"
tower = { version = "0.5" }
tracing = "0.1"
tracing-subscriber = "0.3"
webpki-roots = "0.26"

# Parallel processing
crossbeam-channel = "0.5"
rayon = "1"
bip32 = { version = "0.5", default-features = false }
bs58 = "0.5"
bech32 = "0.11.0"

[profile.release]
debug = false

[profile.test]
opt-level = 3
debug = false
